--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "generator-codenx-fullstack-documentation",
+  "name": "generator-vuefull-docs",
   "version": "6.0.0",
-  "description": "Documentation for CRUD",
-  "author": "Swadesh Behera <admin@codenx.com>",
+  "description": "Documentation for Vue Fullstack Generator",
+  "author": "Swadesh Behera <swadesh@codenx.com>",
   "private": true,
   "scripts": {
     "dev": "vuepress dev",
@@ -13,8 +13,8 @@
     "vuepress": "^0.10.1"
   },
   "engines": {
-    "node": ">=8.x",
-    "npm": ">=5.x"
+    "node": ">=11.x",
+    "npm": ">=6.x"
   },
   "browserslist": [
     "> 1%",
